# raylens

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  README.md  RISKS_AND_WASM.md  ROADMAP.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: deploy.yml
apps/dashboard/: index.html  package.json  vite.config.ts
apps/dashboard/public/: rayforce.js  rayforce.umd.js  rayforce.wasm  wasm-loader.js
apps/dashboard/src/: App.tsx  main.tsx
docs/plans/: 2026-01-23-tauri-v2-port-design.md
examples/: README.md
public/rayforce/: index.js  rayforce.sdk.d.ts  rayforce.sdk.js
scripts/: seed-orders.rfl
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  commands.rs  lib.rs  main.rs  rayforce_ffi.rs
src/components/canvas/: DashboardCanvas.tsx  index.ts
src/components/controls/: ButtonControl.tsx  DateRangePicker.tsx  DropdownControl.tsx  FilterControl.tsx  GaugeControl.tsx  RangeSlider.tsx  TextInput.tsx  index.ts
src/components/data/: DataPanel.tsx
src/components/inspector/: PropertyInspector.tsx  index.ts
src/components/layout/: AppShell.tsx  Sidebar.tsx  Toolbar.tsx
src/components/palette/: ComponentPalette.tsx  index.ts
src/components/tables/: DataGrid.tsx
src/components/viz/: ChartCanvas.tsx  EncodingShelf.tsx  MarksCard.tsx  (+1 more)
src/test/: setup.ts
src/workers/: rayforce.worker.ts
workers/: rayforce.worker.ts
(+25 files in other folders)
