[package]
name = "raylens"
version = "0.1.0"
description = "RayLens - Reactive Dashboard Builder for Rayforce"
authors = ["RayLens Contributors"]
license = "MIT"
repository = "https://github.com/RayforceDB/raylens"
edition = "2021"

[lib]
name = "raylens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt"] }
once_cell = "1"
parking_lot = "0.12"
log = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Security",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
